--- a/4-HOMEWORKpoHTMLCSS/index.html
+++ b/4-HOMEWORKpoHTMLCSS/index.html
@@ -12,9 +12,9 @@
     <header>
         <div class="branding"><a href="#JOURNEY">JOURNEY</a></div>
         <div class="nav-icons">
-            <a href="#"><span class="nav-icon1"></span></a>
-            <a href="#"><span class="nav-icon2"></span></a>
-            <a href="#"><span class="nav-icon3"></span></a>
+            <a class="nav-icon1" href="#"><span class="nav-icon1"></span></a>
+            <a class="nav-icon2" href="#"><span class="nav-icon2"></span></a>
+            <a class="nav-icon3" href="#"><span class="nav-icon3"></span></a>
         </div>
         <div class="welcome-msg">
             <p class="welcome-line">Welcome, <span class="login"><a href="#Log in">Log in</a></span> or <span class="signup"><a href="#Sign up">Sign up</a></span></p>
@@ -37,11 +37,7 @@
                     <span class="social-text-google">Google</span>
                 </a>
             </div>
-            <div class="or-divider">
-                <hr class="divider-line3">
-                <p class="or-text">or</p>
-                <hr class="divider-line4">
-            </div>
+            <div class="title">or</div>
             <form>
                 <input type="text" name="firstname" placeholder="First Name"><br>
                 <input type="text" name="lastname" placeholder="Last Name"><br>
