--- a/6-HOMEWORKpoHTMLCSS/Homework6.html
+++ b/6-HOMEWORKpoHTMLCSS/Homework6.html
@@ -104,14 +104,14 @@
                     <div class="news3">
                         <img src="img-news/post-3-img.png" alt="">
                         <div class="texts">
-                            <h3 class="zagolovok3-6">Western Pyramid Resort in Egypt</h3>
+                            <h3 class="slogan3-6">Western Pyramid Resort in Egypt</h3>
                             <p class="text8">Amazing Gabion Ideas for Outdoors A Gabion is a cage box or cylinder filled with rocks, concrete, or sometimes sand and soil and It is a great way to decorate your outdoor. Amazing Gabion Ideas for Outdoors A Gabion is a cage box or cylinder filled with rocks, concrete, or sometimes sand and soil and It is a great way to decorate your outdoor</p>
                         </div>
                     </div>
                     <div class="news4">
                         <img src="img-news/post-4-img.png" alt="">
                         <div class="texts">
-                            <h3 class="zagolovok3-6">Grand Meadows Resort in Maldives</h3>
+                            <h3 class="slogan3-6">Grand Meadows Resort in Maldives</h3>
                             <p class="text8">Amazing Gabion Ideas for Outdoors A Gabion is a cage box or cylinder filled with rocks, concrete, or sometimes sand and soil and It is a great way to decorate your outdoor. Amazing Gabion Ideas for Outdoors A Gabion is a cage box or cylinder filled with rocks, concrete, or sometimes sand and soil and It is a great way to decorate your outdoor</p>
                         </div>
                     </div>
